# backend

./: main.py  pyproject.toml
config/: get_env.py
model/: base.py  category.py  image.py  product.py
router/: api.py  category.py  image.py  product.py
schema/: base.py  category.py  product.py
sql/: create_table.sql
sql_app/: database.py
