[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["subr1ata <subrotomukherjee8@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.92.0"
uvicorn = "^0.20.0"
peewee = "^3.15.4"
psycopg2-binary = "^2.9.5"
mysql = "^0.0.3"
db-sqlite3 = "^0.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
